# cstring

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Main.c  Makefile  README.md  cstring.c  cstring.h  tests.h
tests/: CMakeLists.txt  Main.cpp  Makefile  all_tests.h  cstr_api_tests.c  main_test_runner.c  test.h  test_suite
tests/capacity/: shrink_to_fit.c
tests/element-access/: cstr_at_test.c  cstr_back_test.c  cstr_empty_test.c  cstr_front_test.c
tests/input-output/: cstr_getstr_test.c  cstr_println_test.c
tests/iterators/: cstr_iterators_test.c  iter_next_prev_test.c
tests/member-functions/: cstr_free_test.c  cstr_init_test.c  cstr_literal_test.c
tests/modifiers/: cstr_append_test.c  cstr_assign_test.c  cstr_clear_test.c  cstr_copy_test.c  cstr_erase_test.c  cstr_insert_test.c  cstr_pop_back_test.c  cstr_push_back_test.c  cstr_replace_test.c  cstr_resize_test.c  cstr_swap_test.c  insert.c  replace.c
tests/operations/: cstr_substr_test.c  substr.c
tests/size-capacity/: cstr_capacity_test.c  cstr_distance_test.c  cstr_length_test.c  cstr_max_size_test.c  cstr_reserve_test.c  cstr_shrink_to_fit_test.c  cstr_size_test.c
